Add home page and style components

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Inventory App</title>
+    <title>Stockify</title>
 
   </head>
   <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
+    <h1>Stockify</h1>
+    <p>Carregando o app...</p>
   </body>
 </html>
