--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Stockify</title>
-
   </head>
   <body>
-    <h1>Stockify</h1>
-    <p>Carregando o app...</p>
+    <div id="root"></div>
   </body>
 </html>
